--- a/css/styles.css
+++ b/css/styles.css
@@ -228,20 +228,31 @@ body {
 .priority-section {
    padding: 120px 0;
 }
-.priority-container {
-   display: flex;
-}
 .priority-list {
    display: flex;
    flex-direction: row;
-   align-items: flex-start;
+   align-items: center;
+   justify-content: center;
    gap: 24px;
 }
 .priority-item {
    width: calc((100% - 72px) / 4);
 }
+.icon-wrapper {
+   background-color: #F4F4FD;
+   border-radius: 4px;
+   width: 264px;
+   height: 112px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
 .priority-icon {
    
+ 
+   
+   
+
 }
 .priority-title {
    margin-bottom: 8px;
