--- a/css/styles.css
+++ b/css/styles.css
@@ -18,18 +18,25 @@
     
     /*Contacts */
     --contacts-text-color: #2E2F42;
-   
-    /* Team section */
-    --team-bg-color: #F4F4FD;
-   
+
     /* Navigation */
     --nav-menu-color: #2E2F42;
     --hover-focus: #404BBF;
     
+    /* Team section */
+    --team-bg-color: #F4F4FD;
+   --link-color: #4d5ae5;
+   --svg-fill: #f4f4fd;
+
+   /* Customers */
+   --customers-link-color: #8e8f99;
+
     /* Footer */
     --footer-bg-color: #2E2F42;
     --footer-logo-color: #F4F4FD;
     --footer-logo-text: #F4F4FD;
+    --footer-right-side-color: #FFFFFF;
+    --footer-icon-fill: #f4f4fd;
    
    /* Portfolio */
     --portfolio-btn-bgc: #F4F4FD;
@@ -108,7 +115,8 @@ body {
 
  /* Header section */
 .header {
-   border-bottom: 1px solid #e7e9fc;
+   border-bottom: 1px solid #E7E9FC;
+   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
    display: flex;
@@ -186,11 +194,12 @@ body {
    max-width: 1440px;
    margin-right: auto;
    margin-left: auto;
-   background-image: url(../images/background-img/Dark-bg.png),
+   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url(../images/background-img/people-office.jpg);
    background-color: var(--hero-bg-color);
    background-repeat: no-repeat;
    background-size: cover;
+   background-position: center;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    padding: 188px 0;
  }
@@ -248,6 +257,7 @@ body {
    width: calc((100% - 72px) / 4);
 }
 .icon-wrapper {
+   margin-bottom: 8px;
    background-color: #F4F4FD;
    border-radius: 4px;
    width: 264px;
@@ -297,22 +307,24 @@ padding-bottom: 120px;
 .team-list {
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-between;
+   justify-content: center;
    gap: 24px;
    
 }
 .team-item {
    background-color: var(--primary-bg-color);
    width: calc((100% - 72px) / 4);
-   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-      border-radius: 0px 0px 4px 4px;
+   box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
+   0px 1px 1px rgba(46, 47, 66, 0.16),
+   0px 2px 1px rgba(46, 47, 66, 0.08);
+   border-radius: 0px 0px 4px 4px;
 }
 .card-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   padding: 32px 16px;
+   padding: 32px 0;
    border-radius: 0px 0px 4px 4px;
 }
 .team-title {
@@ -331,21 +343,22 @@ padding-bottom: 120px;
 .socials-item {
    width: 40px;
    height: 40px;
+}
+.socials-link {
+   width: 100%;
+   height: 100%;
+   background-color: var(--link-color);
+   border-radius: 50%;  
    display: flex;
    align-items: center;
    justify-content: center;
-   order: 1;
-   flex-grow: 0;
-   background: #4D5AE5;
-   border-radius: 50%;
 }
-.socials-link {
-   width:16px;
-   height:16px;
-}
-.socials-item:hover,
-.socials-item:focus {
+.socials-link:hover,
+.socials-link:focus {
    background: #404BBF;
+}
+.socials-icon {
+   fill: var(--svg-fill);
 }
 /* Customers */
 .customers-section {
@@ -354,7 +367,7 @@ padding-bottom: 120px;
 .customers-title {
    font-weight: 700;
    font-size: 36px;
-   line-height: 1.11;
+   line-height: 1.1;
    text-align: center;
    text-transform: capitalize;
    margin-bottom: 72px;
@@ -365,42 +378,49 @@ padding-bottom: 120px;
    gap: 24px;
 }
 .customers-item {
+   width: calc((100% - 120px) / 6);
+   height: 88px;
+  
+}
+.customers-link {
+   width: 100%;
+   height: 100%; 
+   border: 1px solid #8E8F99; 
+   border-radius: 4px; 
    display: flex;
    align-items: center;
    justify-content: center;
-   order: 1;
-   flex-grow: 0;
-   width: 168px;
-   height: 88px;
-   border: 1px solid #8E8F99;
-   border-radius: 4px;
+   color: var(--customers-link-color);
 }
-.customers-link {
-   width: 104px;
-   height: 56px;
+.customers-link:hover,
+.customers-link:focus {
+   border-color: #404bbf;
+   color: #404bbf;
 }
 .customers-icon {
-   fill: #8E8F99;
+   fill: currentColor;
 }
-.customers-icon:hover,
-.customers-icon:focus {
-   fill: #404BBF;
-}
+
 
 /* Footer */
 .footer-wrapper {
    background-color: var(--footer-bg-color);
 }
+
 .footer-section {
   padding-top: 100px;
   padding-bottom: 100px;
-  display: flex;
   
+}
+.footer-container {
+   display: flex;
+  align-items: baseline;
+  gap: 120px;
 }
 .logo-side {
    width: 264px;
    height: 112px;
-   margin-right: 120px;
+   
 }
 .social-media {
    width: 208px;
@@ -423,13 +443,17 @@ padding-bottom: 120px;
 }
 
 .footer-text {
-   color: #FFFFFF;
+   color: var(--footer-right-side-color);
    font-weight: 500;
    margin-bottom: 16px;
 }
-.footer-list .socials-item:hover,
-.footer-list .socials-item:focus {
+
+.footer-list .socials-link:hover,
+.footer-list .socials-link:focus {
    background-color: #31D0AA;
+}
+.footer-list .socials-icon {
+   fill: var(--footer-icon-fill);
 }
 
 /* Portfolio */
@@ -478,8 +502,11 @@ padding-bottom: 120px;
 .gallery-item {
    width: calc((100% - 48px) / 3);
 }
-.gallery-item:hover,
-.gallery-item:focus {
+.gallery-link {
+   display: block;
+}
+.gallery-link:hover,
+.gallery-link:focus {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .gallery-card-content {
