--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,7 @@ padding-bottom: 120px;
 .socials-list {
    display: flex;
    align-items: center;
+   justify-content: center;
    gap: 24px;
 }
 .socials-item {
